grid layout issues. Fixed it by removed the class is-by-4 into just auto to fit based on the available space

--- a/space-x-api/src/styles.css
+++ b/space-x-api/src/styles.css
@@ -1,2 +1,7 @@
 .columns:nth-child(2) 
-    {margin-top: -10rem; margin-right: -20px;}
+    {margin-top: -10rem;
+}
+
+.color-white {
+    color: #fff;
+}
